should handle itself the connection instead of B<nnrpd>.

=item *

The name and location of the B<pullnews> configuration file is now
F<pullnews.marks> in I<pathdb> (instead of F<.pullnews> in I<pathnews>).

=item *

Building with Libtool is no longer optional.  The B<--enable-libtool>
option to B<configure> has been removed.

=back

=head1 Changes in 2.5.4

=over 2

=item *

When using funnel feeds, B<innfeed> log files were open forever, which
resulted in empty log files, once rotated by B<scanlogs>.  Exploder and
process channels are now reopened when C<ctlinnd flushlogs> is used,
which is in particular the command invoked by B<scanlogs> to rotate
log files.

=item *

Fixed the occurrence of an unexpected C<cant select> error generated by
B<innd>.  Thanks to Paul Tomblin for having caught that long-standing
issue.

=back

=head1 Changes in 2.5.3

Please note that the HTML_STATUS compile-time option has been replaced
with the I<htmlstatus> parameter in F<inn.conf>.  If you used HTML_STATUS,
you should set I<htmlstatus> accordingly.

A confusion in the name of a key in F<innfeed.conf> existed in the source
code.  Make sure that the misspelled, undocumented I<backlog-limit-high>
key is *not* used in your F<innfeed.conf> file; its real name is
I<backlog-limit-highwater>.  You should rename the key in case it is present
in your configuration file.  Otherwise, it will not be taken into account.
You can run B<inncheck> to verify that the syntax of this file is correct.

It is generally recommended to run B<inncheck> after any changes done to
configuration files, especially with the new improved version of this script
shipped with S<INN 2.5.3>, thanks to the hard work of Florian Schlichting
who added support for the syntax of F<incoming.conf>, F<innfeed.conf>,
F<readers.conf> and F<storage.conf>.

An up-to-date F<control.ctl> file is provided with this release.  You should
manually update your F<control.ctl> file with the new information recorded